--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     color: #fff;
     font-size: 75px;
     font-weight:bolder ;
+    margin-top: 50px;
 }
 main{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
